--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title></title>
   </head>
   <body>
-    
+    <header id="cabecalho">
+      <h1 id="titulo">Algum texto</h1>
+    </header>
   </body>
 </html>
