--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <header id="cabecalho">
       <h1 id="titulo">Algum texto</h1>
     </header>
+    <img id="minha_foto" src="pimentinhas.png" alt="Foto de pimentas">
   </body>
 </html>
