--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
       <h1 id="titulo">Algum texto</h1>
     </header>
     <img id="minha_foto" src="pimentinhas.png" alt="Foto de pimentas">
+    <ol id="licoes_aprendidas">
+      <li>UNIX</li>
+      <li>Bash</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Internet</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>VSCode</li>
+      <li>SoftSkills</li>
+      <li>Lógica de Programação</li>
+    </ol>
   </body>
 </html>
