--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
       <li>SoftSkills</li>
       <li>Lógica de Programação</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>Flexbox</li>
+      <li>React</li>
+      <li>Metodologias Ágeis</li>
+      <li>Redux</li>
+      <li>Docker</li>
+      <li>SQL</li>
+      <li>Node.js</li>
+      <li>MongoDB</li>
+      <li>Python</li>
+    </ul>
   </body>
 </html>
