--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>Python</li>
     </ul>
     <footer id="rodape">
-      
+      <a href="https://www.google.com" target="_blank">Um link externo</a>
     </footer>
   </body>
 </html>
