--- a/index.html
+++ b/index.html
@@ -3,37 +3,47 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title></title>
+    <title>Lessons Learned</title>
   </head>
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Algum texto</h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Menu</li>
+          <li>Sobre</li>
+        </ul>
+      </nav>
     </header>
     <img id="minha_foto" src="pimentinhas.png" alt="Foto de pimentas">
-    <ol id="licoes_aprendidas">
-      <li>UNIX</li>
-      <li>Bash</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      <li>Internet</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>VSCode</li>
-      <li>SoftSkills</li>
-      <li>Lógica de Programação</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>Flexbox</li>
-      <li>React</li>
-      <li>Metodologias Ágeis</li>
-      <li>Redux</li>
-      <li>Docker</li>
-      <li>SQL</li>
-      <li>Node.js</li>
-      <li>MongoDB</li>
-      <li>Python</li>
-    </ul>
+    <section>
+      <h2>Listas</h2>
+      <ol id="licoes_aprendidas">
+        <li>UNIX</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>VSCode</li>
+        <li>SoftSkills</li>
+        <li>Lógica de Programação</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Flexbox</li>
+        <li>React</li>
+        <li>Metodologias Ágeis</li>
+        <li>Redux</li>
+        <li>Docker</li>
+        <li>SQL</li>
+        <li>Node.js</li>
+        <li>MongoDB</li>
+        <li>Python</li>
+      </ul>
+    </section>
     <article>
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     </article>
