--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Projeto: Lições Aprendidas!</h1>
-      <nav id="navegacao-principal">
+      <nav id="navegacao_principal">
         <ul>
           <li>Home</li>
           <li>Menu</li>
@@ -19,11 +19,11 @@
         </ul>
       </nav>
     </header>
-    <div id="figura-ao-lado">
+    <div id="figura_ao_lado">
       <img id="minha_foto" src="pimentinhas.png" alt="Foto de pimentas">
     </div>
-    <section>
-      <h2>Listas</h2>
+    <section id="listas">
+      <h2>Aprendizados listados</h2>
       <ol id="licoes_aprendidas" class="licoes">
         <li>UNIX</li>
         <li>Bash</li>
@@ -49,10 +49,10 @@
         <li>Python</li>
       </ul>
     </section>
-    <article>
+    <article class="lado-esquerdo">
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     </article>
-    <aside>
+    <aside class="lado-direito">
       "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     </aside>
     <footer id="rodape">
